# HealthMate

./: .gitignore.txt  CMakeLists.txt  healthai.cpp  healthai.h  hydrationtracker.cpp  hydrationtracker.h  labreport.cpp  labreport.h  labreportentry.cpp  labreportentry.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  medicalhistoryentry.cpp  medicalhistoryentry.h  medicineentry.cpp  medicineentry.h  userprofile.cpp  userprofile.h
